[package]
name = "fontdb"
version = "0.18.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
edition = "2018"
description = "A simple, in-memory font database with CSS-like queries."
documentation = "https://docs.rs/fontdb/"
readme = "README.md"
repository = "https://github.com/RazrFalcon/fontdb"
license = "MIT"
keywords = ["font", "db", "css", "truetype", "ttf"]
categories = ["text-processing"]
rust-version = "1.60"

[dependencies]
log = "0.4"
memmap2 = { version = "0.9", optional = true }
slotmap = { version = "1.0.6", default-features = false }
tinyvec = { version = "1.6.0", features = ["alloc"] }

[dependencies.ttf-parser]
version = "0.21"
default-features = false
features = ["opentype-layout", "apple-layout", "variable-fonts", "glyph-names"]

[target.'cfg(all(unix, not(any(target_os = "macos", target_os = "android"))))'.dependencies]
fontconfig-parser = { version = "0.5", optional = true, default-features = false }

[dev-dependencies]
env_logger = { version = "0.10", default-features = false }
criterion = "0.5.1"

[features]
default = ["std", "fs", "memmap", "fontconfig", "dir-symlink"]
std = ["ttf-parser/std"]
# Allows local filesystem interactions.
fs = ["std"]
# Allows font files memory mapping, greatly improves performance.
memmap = ["fs", "memmap2"]
# Enables minimal fontconfig support on Linux.
# Must be enabled for NixOS, otherwise no fonts will be loaded.
fontconfig = ["fontconfig-parser", "fs"]
# Allows fonts to be discovered through directory symlinks.
# Must be enabled to discover fonts added via Nix home-manager. 
dir-symlink = ["fs"]

[[bench]]
name = "get_system_fonts"
harness = false
